# dprint-plugin-typstyle

./: .gitignore  Cargo.toml  NOTICE  README.md  Taskfile.yml  dprint-dogfooding.json  dprint.json  flake.nix  package.nix
.github/: dependabot.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: CD.yml  CI.yml  CICD.yml  bump-flake-lock-and-selfup.yml  dependency-review.yml  lint.yml  merge-bot-pr.yml  nix.yml
deployment/: schema.json
examples/: expected.typ  raw.typ
generate_json_schema/: Cargo.toml
generate_json_schema/src/: main.rs
scripts/: generate_json_schema  normalize_json_schema.bash  test-jsonschema.bash
src/: configuration.rs  lib.rs
tests/: raw.typ
tests/all/: dprint.json  expected.typ
tests/default/: expected.typ
tests/with_global_config/: dprint.json  expected.typ
