[package]
name = "dprint-plugin-typstyle"
version = "0.3.0"
authors = ["Kenichi Kamiya <kachick1@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dprint-core = { version = "0.67.3", features = ["wasm"] }
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Disable default feature to omit `wasm-bindgen`
# https://github.com/Enter-tainer/typstyle/blob/2129609c0414e163d3ca1460d97c7b2ae5c271ff/Cargo.toml#L42C1-L42C13
# https://github.com/dprint/dprint/issues/447
typstyle-core = { version = "0.12.15", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]
