[package]
name = "dprint-plugin-typstyle"
version = "0.3.8"
authors = ["Kenichi Kamiya <kachick1@gmail.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
dprint-core = { version = "0.67.4", features = ["wasm"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Disable default feature to omit `wasm-bindgen`
# https://github.com/typstyle-rs/typstyle/blob/2129609c0414e163d3ca1460d97c7b2ae5c271ff/Cargo.toml#L42C1-L42C13
# https://github.com/dprint/dprint/issues/447
typstyle-core = { version = "0.13.17", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
resolver = "2"
members = ["generate_json_schema"]
